# Example-CMakeLists

./: CMakeLists.txt  README.md  my_lib.cc  my_lib.h
app/: main.cc
configured/: config.hpp.in
src/: CMakeLists.txt
src/my_libs/: CMakeLists.txt
